# movie-recommendation-api

./: .coverage  .gitignore  AGENTS.md  README.md  alembic.ini  app_ctl.py  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: run_tests.yml
backend/: app.py
backend/api/: admin.py  auth.py  deps.py  error_handlers.py  main.py
backend/api/routers/: admin.py  auth.py  v1.py  v2.py
backend/api/schemas/: __init__.py  admin.py  common.py  movie.py
backend/application/: auth_service.py  movie_service.py
backend/core/: config.py  database.py  exceptions.py  logging.py  security.py  settings.py
backend/domain/: errors.py  policies.py
backend/models/: __init__.py  movie.py  queue.py  user.py
backend/populate_db/: __init__.py
backend/routers/: __init__.py  admin.py  auth.py  v1.py  v2.py
backend/scheduler/: __init__.py  jobs.py
backend/schemas/: __init__.py  admin.py  auth.py  movie.py
backend/services/: backup.py  vector_store.py
backend/storage/: db.py
backend/validation/: models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
migrations/: env.py
migrations/versions/: acbb07b5acc5_add_index.py
src/api/: admin.py  auth.py  exceptions.py  main.py
src/logger/: __init__.py
src/populate_db/: __init__.py
src/scheduler/: jobs.py
src/storage/: db.py  vector_store.py
src/validation/: models.py
tests/: conftest.py  external_api_example_response.json  test_api.py  test_external_api.py  test_movie_create.py
(+54 files in other folders)
