[project]
name = "movie-recommendation-api"
version = "0.1.0"
description = "A movie recommendation API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "chromadb>=1.0.20",
    "einops>=0.8.1",
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "regex>=2025.9.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
